# ArkClusterApp

./: .env.example  .gitattributes  README.md  package-lock.json  package.json
deploy/systemd/: ark-server@.service  ark-slot-start  slot.env.example
scripts/: import_ark_save_server.sh  import_local_ark_save.ps1
scripts/server/: install_or_update_ark_server.sh  install_steamcmd.sh  prepare_ark_runtime.sh  setup_smb_share.sh
scripts/windows/: README.txt  node-agent-config.example.json  package_node_bundle.ps1  setup.ps1
services/manager/: .gitignore  Cargo.toml  manager.example.toml
services/manager/migrations/: 0001_init.sql  0002_operations.sql  0003_server_runtime.sql  0004_nodes.sql
services/manager/src/: api.rs  api_nodes.rs  auth.rs  config.rs  db.rs  main.rs  mock.rs  state.rs  test_data.rs
services/manager/src/models/: audit.rs  backup.rs  config_edit.rs  domain.rs  governor.rs  maintenance.rs  mod.rs  mods.rs  node_tasks.rs  nodes.rs  operations.rs  rcon.rs  resources.rs  runtime.rs  systemd.rs  travel.rs  travel_sessions.rs
services/node-agent/: Cargo.toml
services/node-agent/src/: ark_server.rs  checks.rs  config.rs  heartbeat.rs  main.rs  rcon.rs  tasks.rs
src/: app.css  app.html
src/lib/: api.ts  nav.ts  types.ts  ui.ts
src/lib/components/: ActivityLogItem.svelte  BackendStatusBanner.svelte  BackupTable.svelte  Button.svelte  Card.svelte  Checkbox.svelte  ConfigValueEditor.svelte  ConfirmActionDialog.svelte  DiscordStatusCard.svelte  EmptyState.svelte  ErrorState.svelte  HomeProtectionCard.svelte  LoadingState.svelte  MapCard.svelte  MapStateTimeline.svelte  ModCard.svelte  ModTable.svelte  NumberInput.svelte  PageHeader.svelte  PlayerList.svelte  index.ts  (+16 more)
src/routes/: +layout.svelte  +page.svelte
(+13 files in other folders)
