[package]
name = "ark-node-agent"
version = "0.1.0"
edition = "2021"
description = "ARK Cluster Windows travel node agent"
license = "MIT"

[[bin]]
name = "ark-node-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "process", "io-util", "sync", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sysinfo = "0.32"
if-addrs = "0.13"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
